# TemplateExternRepo

./: CMakeLists.txt  README.md  version.cmake
Executable/: CMakeLists.txt  main.cpp
Playground/: CMakeLists.txt
Shared/: CMakeLists.txt
Shared/ProtoFiles/ProtoFiles/: CMakeLists.txt  candy.proto
Shared/ProtoFiles/ProtoFiles/test/: ProtoFilesTestMain.cpp
